--- a/Login_Page/index.html
+++ b/Login_Page/index.html
@@ -1,105 +1,108 @@
+<!-- 
+    Document: Login Page for SaaS Application
+    Author: [Your Name]
+    Date: [Today's Date]
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - AI SaaS Platform</title>
+    <title>Login Page</title>
     <style>
-        /* Corporate Colors */
-        :root {
-            --primary1: rgb(35, 55, 70);
-            --primary2: rgb(7, 77, 131);
-            --primary3: rgb(0, 111, 186);
-            --primary4: rgb(0, 169, 224);
-            --text-color: #ffffff;
-            --background: #f4f7f9;
-        }
-
-        /* Reset & General Styles */
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: Arial, sans-serif;
-        }
-
+        /* Global Styles */
         body {
-            background: var(--background);
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
+            font-family: Arial, sans-serif;
+            background-color: #f2f2f2; /* Light gray background */
+        }
+
+        /* Corporate Branding Colors */
+        :root {
+            --primary-1: rgb(35, 55, 70);
+            --primary-2: rgb(7, 77, 131);
+            --primary-3: rgb(0, 111, 186);
+            --primary-4: rgb(0, 169, 224);
         }
 
         /* Login Container */
         .login-container {
-            background: #fff;
-            padding: 30px;
+            width: 300px;
+            margin: 50px auto;
+            padding: 20px;
+            background-color: #fff; /* White background */
+            border: 1px solid #ddd; /* Light gray border */
             border-radius: 10px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            text-align: center;
-            width: 350px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Subtle shadow */
         }
 
-        /* Logo Placeholder */
+        /* Logo */
         .logo {
-            width: 150px;
+            width: 100%;
             height: 50px;
-            background: var(--primary1);
-            margin: 0 auto 20px;
+            margin-bottom: 20px;
+            background-color: var(--primary-1); /* Primary 1 color */
             display: flex;
-            align-items: center;
             justify-content: center;
-            color: var(--text-color);
-            font-size: 18px;
+            align-items: center;
+            color: #fff; /* White text */
+            font-size: 24px;
             font-weight: bold;
-            border-radius: 5px;
         }
 
-        /* Input Styles */
-        .input-group {
-            margin-bottom: 15px;
-            text-align: left;
+        /* Heading */
+        .heading {
+            margin-bottom: 20px;
+            font-size: 24px;
+            font-weight: bold;
+            color: var(--primary-2); /* Primary 2 color */
         }
 
-        label {
-            font-size: 14px;
-            color: var(--primary1);
+        /* Input Fields */
+        .input-field {
+            margin-bottom: 20px;
+        }
+
+        .input-field label {
             display: block;
-            margin-bottom: 5px;
+            margin-bottom: 10px;
+            font-size: 16px;
+            font-weight: bold;
+            color: var(--primary-3); /* Primary 3 color */
         }
 
-        input {
+        .input-field input[type="email"],
+        .input-field input[type="password"] {
             width: 100%;
+            height: 40px;
             padding: 10px;
-            border: 1px solid var(--primary3);
+            border: 1px solid #ccc; /* Light gray border */
             border-radius: 5px;
-            font-size: 16px;
         }
 
-        /* Login Button */
-        .login-btn {
+        /* Buttons */
+        .button {
             width: 100%;
-            background: var(--primary3);
-            color: var(--text-color);
-            padding: 12px;
-            border: none;
+            height: 40px;
+            padding: 10px;
+            border: none; /* No border */
             border-radius: 5px;
+            background-color: var(--primary-4); /* Primary 4 color */
+            color: #fff; /* White text */
             font-size: 16px;
+            font-weight: bold;
             cursor: pointer;
-            transition: background 0.3s;
         }
 
-        .login-btn:hover {
-            background: var(--primary4);
+        .button:hover {
+            background-color: var(--primary-3); /* Primary 3 color on hover */
         }
 
-        /* Forgot Password */
+        /* Forgot Password Link */
         .forgot-password {
-            display: block;
             margin-top: 10px;
             font-size: 14px;
-            color: var(--primary2);
+            color: var(--primary-2); /* Primary 2 color */
             text-decoration: none;
         }
 
@@ -109,56 +112,55 @@
 
         /* Language Selector */
         .language-selector {
-            position: absolute;
-            top: 15px;
-            right: 15px;
+            margin-top: 20px;
+            font-size: 14px;
+            color: var(--primary-3); /* Primary 3 color */
         }
 
-        select {
+        .language-selector select {
+            width: 100%;
+            height: 30px;
             padding: 5px;
-            border: 1px solid var(--primary2);
+            border: 1px solid #ccc; /* Light gray border */
             border-radius: 5px;
-            font-size: 14px;
-            background: #fff;
         }
     </style>
 </head>
 <body>
-
-    <!-- Language Selector -->
-    <div class="language-selector">
-        <label for="language"></label>
-        <select id="language">
-            <option value="en">English</option>
-            <option value="de">Deutsch</option>
-            <option value="fr">Français</option>
-            <option value="es">Español</option>
-            <option value="pt">Português (BR)</option>
-        </select>
-    </div>
-
-    <!-- Login Form -->
     <div class="login-container">
-        <div class="logo">Your Logo</div> <!-- Placeholder for Corporate Logo -->
+        <!-- Logo -->
+        <div class="logo">Logo Placeholder</div>
 
-        <h2>Login</h2>
+        <!-- Heading -->
+        <h2 class="heading">Login</h2>
 
-        <form>
-            <div class="input-group">
-                <label for="email">Email</label>
-                <input type="email" id="email" placeholder="Enter your email" required>
-            </div>
+        <!-- Input Fields -->
+        <div class="input-field">
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" required>
+        </div>
 
-            <div class="input-group">
-                <label for="password">Password</label>
-                <input type="password" id="password" placeholder="Enter your password" required>
-            </div>
+        <div class="input-field">
+            <label for="password">Password</label>
+            <input type="password" id="password" name="password" required>
+        </div>
 
-            <button type="submit" class="login-btn">Sign In</button>
+        <!-- Buttons -->
+        <button class="button">Sign In</button>
 
-            <a href="#" class="forgot-password">Forgot your password?</a>
-        </form>
+        <!-- Forgot Password Link -->
+        <a href="#" class="forgot-password">Forgot your password?</a>
+
+        <!-- Language Selector -->
+        <div class="language-selector">
+            <select>
+                <option value="en">English</option>
+                <option value="de">German</option>
+                <option value="fr">French</option>
+                <option value="es">Spanish</option>
+                <option value="pt-br">Brazilian Portuguese</option>
+            </select>
+        </div>
     </div>
-
 </body>
 </html>
